--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5414e645",
    "metadata": {},
    "outputs": [
@@ -25,59 +25,14 @@
       "9. Xuất 5 nhân viên có thu nhập cao nhất\n",
       "0. Thoát\n",
       "========================================\n",
-      "Chức năng: Nhập danh sách nhân viên\n",
-      "\n",
-      "========================================\n",
-      "CHƯƠNG TRÌNH QUẢN LÝ NHÂN VIÊN\n",
-      "========================================\n",
-      "1. Nhập danh sách nhân viên\n",
-      "2. Đọc thông tin nhân viên từ file\n",
-      "3. Tìm và hiển thị nhân viên theo mã\n",
-      "4. Xóa nhân viên theo mã\n",
-      "5. Cập nhật thông tin nhân viên theo mã\n",
-      "6. Tìm các nhân viên theo khoảng lương\n",
-      "7. Sắp xếp nhân viên theo họ và tên\n",
-      "8. Sắp xếp nhân viên theo thu nhập\n",
-      "9. Xuất 5 nhân viên có thu nhập cao nhất\n",
-      "0. Thoát\n",
-      "========================================\n",
-      "Chức năng: Sắp xếp nhân viên theo họ và tên\n",
-      "\n",
-      "========================================\n",
-      "CHƯƠNG TRÌNH QUẢN LÝ NHÂN VIÊN\n",
-      "========================================\n",
-      "1. Nhập danh sách nhân viên\n",
-      "2. Đọc thông tin nhân viên từ file\n",
-      "3. Tìm và hiển thị nhân viên theo mã\n",
-      "4. Xóa nhân viên theo mã\n",
-      "5. Cập nhật thông tin nhân viên theo mã\n",
-      "6. Tìm các nhân viên theo khoảng lương\n",
-      "7. Sắp xếp nhân viên theo họ và tên\n",
-      "8. Sắp xếp nhân viên theo thu nhập\n",
-      "9. Xuất 5 nhân viên có thu nhập cao nhất\n",
-      "0. Thoát\n",
-      "========================================\n",
-      "Chức năng: Sắp xếp nhân viên theo thu nhập\n",
-      "\n",
-      "========================================\n",
-      "CHƯƠNG TRÌNH QUẢN LÝ NHÂN VIÊN\n",
-      "========================================\n",
-      "1. Nhập danh sách nhân viên\n",
-      "2. Đọc thông tin nhân viên từ file\n",
-      "3. Tìm và hiển thị nhân viên theo mã\n",
-      "4. Xóa nhân viên theo mã\n",
-      "5. Cập nhật thông tin nhân viên theo mã\n",
-      "6. Tìm các nhân viên theo khoảng lương\n",
-      "7. Sắp xếp nhân viên theo họ và tên\n",
-      "8. Sắp xếp nhân viên theo thu nhập\n",
-      "9. Xuất 5 nhân viên có thu nhập cao nhất\n",
-      "0. Thoát\n",
-      "========================================\n",
-      "Thoát chương trình\n"
+      "Chức năng 10: Thoát chương trình.\n",
+      "Kết thúc chương trình.\n"
      ]
     }
    ],
    "source": [
+    "import assignment2\n",
+    "\n",
     "def menu():\n",
     "    print(\"\\n\" + \"=\"*40)\n",
     "    print(\"CHƯƠNG TRÌNH QUẢN LÝ NHÂN VIÊN\")\n",
@@ -100,26 +55,26 @@
     "\n",
     "    match lua_chon:\n",
     "        case \"0\":\n",
-    "            print(\"Thoát chương trình\")\n",
+    "            assignment2.cn10()  # Thoát chương trình\n",
     "            break\n",
     "        case \"1\":\n",
-    "            print(\"Chức năng: Nhập danh sách nhân viên\")\n",
+    "            assignment2.cn1()\n",
     "        case \"2\":\n",
-    "            print(\"Chức năng: Đọc thông tin nhân viên từ file\")\n",
+    "            assignment2.cn2()\n",
     "        case \"3\":\n",
-    "            print(\"Chức năng: Tìm và hiển thị nhân viên theo mã\")\n",
+    "            assignment2.cn3()\n",
     "        case \"4\":\n",
-    "            print(\"Chức năng: Xóa nhân viên theo mã\")\n",
+    "            assignment2.cn4()\n",
     "        case \"5\":\n",
-    "            print(\"Chức năng: Cập nhật thông tin nhân viên theo mã\")\n",
+    "            assignment2.cn5()\n",
     "        case \"6\":\n",
-    "            print(\"Chức năng: Tìm các nhân viên theo khoảng lương\")\n",
+    "            assignment2.cn6()\n",
     "        case \"7\":\n",
-    "            print(\"Chức năng: Sắp xếp nhân viên theo họ và tên\")\n",
+    "            assignment2.cn7()\n",
     "        case \"8\":\n",
-    "            print(\"Chức năng: Sắp xếp nhân viên theo thu nhập\")\n",
+    "            assignment2.cn8()\n",
     "        case \"9\":\n",
-    "            print(\"Chức năng: Xuất 5 nhân viên có thu nhập cao nhất\")\n",
+    "            assignment2.cn9()\n",
     "        case _:\n",
     "            print(\"Lựa chọn không hợp lệ, vui lòng nhập lại hoặc nhấn 0 để thoát.\")\n",
     "\n",
